<resources>
    <string name="app_name">MovieMe</string>
    <string name="lgn_user">Username</string>
    <string name="lgn_pass">Password</string>
    <string name="lgn_button">Log in</string>
    <string name="user">User</string>

    <string name="reg_name">Name</string>
    <string name="reg_mail">E-mail</string>
    <string name="reg_pass">Password</string>
    <string name="reg_user">Username</string>

    <string name="ent_register">Sign in</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_next">Watch Next</string>
    <string name="nav_watched">Watched</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_results">Results</string>
    <string name="nav_popular">Popular</string>

    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>

    <string name="year">Year</string>
    <string name="added">Added</string>

    <string name="failed">Fail to Insert User</string>

    <string name="type_anything">Type the movie\'s Title Here</string>
    <string name="connection_error">Connection Error</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_incorrect">User Not Found</string>
    <string name="pass_incorrect">Password Incorrect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
