<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/nav_next"
            android:icon="@drawable/ic_add_to_queue_black_24dp"
            android:title="@string/nav_next" />
        <item
            android:id="@+id/nav_watched"
            android:icon="@drawable/ic_check_black_24dp"
            android:title="@string/nav_watched" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/nav_logout" />

    </group>


</menu>
