<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a2016951790.tp_02_movieme.EnterActivity"
    android:background="@drawable/login">

    <Button
        android:id="@+id/ent_login"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_gravity="right"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:text="@string/lgn_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="59dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ent_register"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_gravity="left"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:text="@string/ent_register"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
